...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_widget_color_1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_blue_dark" />

                <Button
                    android:id="@+id/btn_widget_color_4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_red_dark" />

            </LinearLayout>
...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_widget_color_2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_orange_light" />

                <Button
                    android:id="@+id/btn_widget_color_5"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_green_light" />

            </LinearLayout>
...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_widget_color_3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_purple" />

                <Button
                    android:id="@+id/btn_widget_color_6"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_red_light" />

            </LinearLayout>
...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_background_color_1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_blue_dark" />

                <Button
                    android:id="@+id/btn_background_color_4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_red_dark" />

            </LinearLayout>
...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_background_color_2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_orange_light" />

                <Button
                    android:id="@+id/btn_background_color_5"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_green_light" />

            </LinearLayout>
...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_background_color_3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_purple" />

                <Button
                    android:id="@+id/btn_background_color_6"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@android:color/holo_red_light" />

            </LinearLayout>
...
                    android:textStyle="normal|bold"
                    android:visibility="visible" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="right|center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="15dp"
...
