...
                app:layout_constraintHorizontal_bias="0.023"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_background_search"
                app:layout_constraintVertical_bias="0.388" />

            <TextView
                android:id="@+id/txt_lesson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="60dp"
                android:text="Bài học"
                android:textColor="@color/TextTitleColor"
...
                android:id="@+id/btn_recent_lesson"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:background="@drawable/recent_lesson_icon" />

            <TextView
                android:id="@+id/txt_recent_lesson"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:font="@font/arimo"
                android:text="Bài học gần đây"
...
                android:id="@+id/btn_dongphan_danhphap"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:background="@drawable/dongphan_danhphap_icon" />

            <TextView
                android:id="@+id/txt_dongphan_danhphap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:font="@font/alef"
                android:text="Đồng phân danh pháp"
...
                android:id="@+id/btn_quick_search"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:background="@drawable/floating_search_icon" />

            <TextView
                android:id="@+id/txt_quick_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:text="Search nhanh"
                android:textColor="@color/TextTitleColor"
...
                android:layout_height="60dp"
                android:background="@drawable/bang_tuan_hoang_icon" />



            <TextView
                android:id="@+id/txt_bangtuanhoang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="60dp"
                android:text="Bảng tuần hoàng"
                android:textColor="@color/TextTitleColor"
...
        </LinearLayout>




        <Button
            android:id="@+id/btn_search"
            android:layout_width="31dp"
            android:layout_height="30dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="304dp"
            android:layout_marginTop="4dp"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9945" />


        <Button
            android:id="@+id/btn_setting"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/setting_icon"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.045" />

        <phamf.com.chemicalapp.CustomView.VirtualKeyBoardSensor
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
...
                android:layout_marginBottom="2dp"
                android:alpha="0.5"
                android:background="@drawable/black_background"
                android:paddingBottom="25dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/bg_escape_search_mode"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
...
